--- a/dist.ini
+++ b/dist.ini
@@ -25,7 +25,7 @@ repository.type   = git
 [PkgVersion]
 
 [PodSyntaxTests]
-[NoTabsTests]
+;[NoTabsTests]
 [Test::CPAN::Changes]
 
 [Prereqs / BuildRequires]
