--- a/dist.ini
+++ b/dist.ini
@@ -26,7 +26,7 @@ repository.type   = git
 
 [PodSyntaxTests]
 ;[NoTabsTests]
-[Test::CPAN::Changes]
+;[Test::CPAN::Changes]
 
 [Prereqs / BuildRequires]
 FindBin        = 0
