Fix meta resource info

--- a/dist.ini
+++ b/dist.ini
@@ -14,10 +14,10 @@ format = %-7v %{yyyy-MM-dd}d
 [MetaJSON]
 
 [MetaResources]
-bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Courriel
-bugtracker.mailto = bug-courriel@rt.cpan.org
-repository.url    = git://git.urth.org/Courriel.git
-repository.web    = http://git.urth.org/Courriel.git
+bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=MooseX-Types
+bugtracker.mailto = bug-moosex-types@rt.cpan.org
+repository.url    = git://git.moose.perl.org/MooseX-Types.git
+repository.web    = http://git.shadowcat.co.uk/gitweb/gitweb.cgi?p=gitmo/MooseX-Types.git;a=summary
 repository.type   = git
 
 [SurgicalPodWeaver]
