lots more dzil goodness

--- a/dist.ini
+++ b/dist.ini
@@ -3,15 +3,29 @@ author  = Robert "phaylon" Sedlacek <rs@474.at>
 license = Perl_5
 copyright_holder = Robert "phaylon" Sedlacek
 
-version = 0.35
+[Git::NextVersion]
+version_regexp = ^v([\d._]+)(-TRIAL)?$
 
 [NextRelease]
-format = %-7v %{yyyy-MM-dd}d
+format = %-6V  %{yyyy-MM-dd HH:mm:ss ZZZZ}d (%U)
 
-[@Basic]
+[@Filter]
+-bundle = @Basic
+-remove = ConfirmRelease
+-remove = ExtraTests
 
 [InstallGuide]
 [MetaJSON]
+
+[MetaNoIndex]
+directory = t
+directory = xt
+directory = examples
+
+[MetaProvides::Package]
+meta_noindex = 1
+
+[MetaConfig]
 
 [MetaResources]
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=MooseX-Types
@@ -23,10 +37,66 @@ repository.type   = git
 [SurgicalPodWeaver]
 
 [PkgVersion]
+[MinimumPerl]
+
+
+[Test::Compile]
+bail_out_on_fail = 1
+
+[Test::CheckDeps]
+:version = 0.005
+fatal = 1
+
+[NoTabsTests]
+[MetaTests]
+[Test::ChangesHasContent]
+[Test::Version]
+
+[Test::MinimumVersion]
+:version = 2.000003
+max_target_perl = 5.008003
 
 [PodSyntaxTests]
-;[NoTabsTests]
-;[Test::CPAN::Changes]
+;[PodCoverageTests] ; we have our own custom one
+[Test::Pod::No404s]
+[Test::PodSpelling]
+stopwords = API
+stopwords = Florian
+stopwords = Kitover
+stopwords = MyStr
+stopwords = Napiorkowski
+stopwords = Pearcey
+stopwords = Perlop
+stopwords = PositiveInt
+stopwords = Ragwitz
+stopwords = Rolsky
+stopwords = Sedlacek
+stopwords = StrOrArrayRef
+stopwords = TODO
+stopwords = TypeAndSubExporter
+stopwords = autarch
+stopwords = caelum
+stopwords = coercions
+stopwords = documention
+stopwords = gotchas
+stopwords = hdp
+stopwords = inline
+stopwords = instantiation
+stopwords = isa
+stopwords = jnapiorkowski
+stopwords = libs
+stopwords = namespaces
+stopwords = organise
+stopwords = parameterize
+stopwords = parameterized
+stopwords = phaylon
+stopwords = rafl
+stopwords = subclasses
+stopwords = subtype
+stopwords = subtypes
+stopwords = subtyping
+stopwords = typeconstraint
+
 
 [Prereqs / BuildRequires]
 FindBin        = 0
@@ -45,4 +115,40 @@ Sub::Name        = 0
 namespace::clean = 0.19
 perl             = v5.8.0
 
-[@Git]
+
+;;; Before Release
+[Git::Check]
+
+[Git::CheckFor::MergeConflicts]
+
+[Git::CheckFor::CorrectBranch]
+:version = 0.004
+release_branch = master
+
+[Git::Remote::Check]
+remote_branch = master
+
+[CheckPrereqsIndexed]
+[RunExtraTests]
+
+
+;;; Releaser
+[UploadToCPAN]
+
+
+;;; AfterRelease
+[Git::Commit]
+allow_dirty = Changes
+commit_msg = %N-%v%t%n%n%c
+
+[Git::Tag]
+tag_format = v%v%t
+tag_message = v%v%t
+
+[Git::Push]
+
+[InstallRelease]
+install_command = cpanm .
+
+; listed late, to allow all other plugins which do BeforeRelease checks to run first.
+[ConfirmRelease]
