--- a/dist.ini
+++ b/dist.ini
@@ -99,23 +99,19 @@ stopwords = subtypes
 stopwords = subtyping
 stopwords = typeconstraint
 
+[AutoPrereqs]
 
-[Prereqs / BuildRequires]
-FindBin        = 0
-Test::Fatal    = 0
-Test::Moose    = 0
-Test::More     = 0.88
-Test::Requires = 0
-
-[Prereqs]
-Carp             = 0
+; specific version requirements
+[Prereqs / RuntimeRequires]
 Carp::Clan       = 6.00
 Moose            = 1.06
 Scalar::Util     = 1.19
 Sub::Install     = 0.924
-Sub::Name        = 0
 namespace::clean = 0.19
-perl             = v5.8.0
+
+[Prereqs / DevelopRequires]
+Test::Pod::Coverage  = 1.04
+Pod::Coverage::Moose = 0.02
 
 
 ;;; Before Release
