use namespace::autoclean instead of namespace::clean

--- a/dist.ini
+++ b/dist.ini
@@ -109,7 +109,7 @@ Carp::Clan       = 6.00
 Moose            = 1.06
 Scalar::Util     = 1.19
 Sub::Install     = 0.924
-namespace::clean = 0.19
+namespace::autoclean = 0.08
 
 [Prereqs / DevelopRequires]
 Test::Pod::Coverage  = 1.04
