--- a/dist.ini
+++ b/dist.ini
@@ -14,6 +14,9 @@ format = %-6V  %{yyyy-MM-dd HH:mm:ss ZZZZ}d (%U)
 -remove = ConfirmRelease
 -remove = ExtraTests
 
+[Authority]
+authority = cpan:PHAYLON
+
 [InstallGuide]
 [MetaJSON]
 
