set copyright_year to the first release

--- a/dist.ini
+++ b/dist.ini
@@ -2,6 +2,7 @@ name    = MooseX-Types
 author  = Robert "phaylon" Sedlacek <rs@474.at>
 license = Perl_5
 copyright_holder = Robert "phaylon" Sedlacek
+copyright_year = 2007
 
 [Git::NextVersion]
 version_regexp = ^v([\d._]+)(-TRIAL)?$
