switch to my pluginbundle for better sanity

--- a/dist.ini
+++ b/dist.ini
@@ -4,108 +4,28 @@ license = Perl_5
 copyright_holder = Robert "phaylon" Sedlacek
 copyright_year = 2007
 
-[Git::NextVersion]
-version_regexp = ^v([\d._]+)(-TRIAL)?$
-
-[NextRelease]
-format = %-6V  %{yyyy-MM-dd HH:mm:ss ZZZZ}d (%U)
-
-[@Filter]
--bundle = @Basic
--remove = ConfirmRelease
--remove = ExtraTests
-
-[Authority]
-authority = cpan:PHAYLON
-
-[InstallGuide]
-[MetaJSON]
-
-[MetaNoIndex]
-directory = t
-directory = xt
-directory = examples
-
-[MetaProvides::Package]
-meta_noindex = 1
-
-[MetaConfig]
-
-[MetaResources]
-bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=MooseX-Types
-bugtracker.mailto = bug-moosex-types@rt.cpan.org
-repository.url    = git://git.moose.perl.org/MooseX-Types.git
-repository.web    = http://git.shadowcat.co.uk/gitweb/gitweb.cgi?p=gitmo/MooseX-Types.git;a=summary
-repository.type   = git
+[@Author::ETHER]
+:version = 0.020
+server = gitmo
+-remove = PodWeaver         ; we are more surgical
+-remove = PodCoverageTests  ; we have our own custom one
+-remove = Test::UnusedVars  ; we like our $class!
+Authority.authority = cpan:PHAYLON
+Test::MinimumVersion.max_target_perl = 5.008003
+Test::PodSpelling.stopwords[0] = SUBTYPES
+Test::PodSpelling.stopwords[1] = coercions
+Test::PodSpelling.stopwords[2] = subtypes
+Test::PodSpelling.stopwords[3] = subtyping
+Test::PodSpelling.stopwords[4] = instantiation
+Test::PodSpelling.stopwords[5] = TODO
+Test::PodSpelling.stopwords[6] = Organise
+Test::PodSpelling.stopwords[7] = parameterized
+Test::PodSpelling.stopwords[8] = parameterize
+Test::PodSpelling.stopwords[9] = subtype
 
 [SurgicalPodWeaver]
 
 [ContributorsFromGit]
-
-[PkgVersion]
-[MinimumPerl]
-
-
-[Test::Compile]
-bail_out_on_fail = 1
-
-[Test::CheckDeps]
-:version = 0.005
-fatal = 1
-
-[NoTabsTests]
-[EOLTests]
-[MetaTests]
-[Test::CPAN::Changes]
-[Test::ChangesHasContent]
-[Test::Version]
-
-[Test::MinimumVersion]
-:version = 2.000003
-max_target_perl = 5.008003
-
-[PodSyntaxTests]
-;[PodCoverageTests] ; we have our own custom one
-[Test::Pod::No404s]
-[Test::PodSpelling]
-stopwords = API
-stopwords = Florian
-stopwords = Kitover
-stopwords = MyStr
-stopwords = Napiorkowski
-stopwords = Pearcey
-stopwords = Perlop
-stopwords = PositiveInt
-stopwords = Ragwitz
-stopwords = Rolsky
-stopwords = Sedlacek
-stopwords = StrOrArrayRef
-stopwords = TODO
-stopwords = TypeAndSubExporter
-stopwords = autarch
-stopwords = caelum
-stopwords = coercions
-stopwords = documention
-stopwords = gotchas
-stopwords = hdp
-stopwords = inline
-stopwords = instantiation
-stopwords = isa
-stopwords = jnapiorkowski
-stopwords = libs
-stopwords = namespaces
-stopwords = organise
-stopwords = parameterize
-stopwords = parameterized
-stopwords = phaylon
-stopwords = rafl
-stopwords = subclasses
-stopwords = subtype
-stopwords = subtypes
-stopwords = subtyping
-stopwords = typeconstraint
-
-[AutoPrereqs]
 
 ; specific version requirements
 [Prereqs / RuntimeRequires]
@@ -117,37 +37,3 @@ namespace::autoclean = 0.08
 [Prereqs / DevelopRequires]
 Test::Pod::Coverage  = 1.04
 Pod::Coverage::Moose = 0.02
-
-
-;;; Before Release
-[Git::Check]
-
-[Git::CheckFor::MergeConflicts]
-
-[Git::CheckFor::CorrectBranch]
-:version = 0.004
-release_branch = master
-
-[Git::Remote::Check]
-remote_branch = master
-
-[CheckPrereqsIndexed]
-[RunExtraTests]
-
-
-;;; AfterRelease
-[Git::Commit]
-allow_dirty = Changes
-commit_msg = %N-%v%t%n%n%c
-
-[Git::Tag]
-tag_format = v%v%t
-tag_message = v%v%t
-
-[Git::Push]
-
-[InstallRelease]
-install_command = cpanm .
-
-; listed late, to allow all other plugins which do BeforeRelease checks to run first.
-[ConfirmRelease]
