move repository to http://github.com/moose/MooseX-Types

--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,7 @@ copyright_year = 2007
 
 [@Author::ETHER]
 :version = 0.020
-server = gitmo
+server = github
 -remove = PodWeaver         ; we are more surgical
 -remove = PodCoverageTests  ; we have our own custom one
 -remove = Test::UnusedVars  ; we like our $class!
