--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,4 @@
-README
-MANIFEST
-MANIFEST.bak
-Makefile
-Makefile.old
-blib
-pm_to_blib
-inc
-META.yml
-.*
+/.build/
 !.gitignore
 !.mailmap
-MooseX-Types*
-.build
+/MooseX-Types-*
