add irc and mailinglist addresses to metadata

--- a/dist.ini
+++ b/dist.ini
@@ -37,3 +37,7 @@ namespace::autoclean = 0.08
 [Prereqs / DevelopRequires]
 Test::Pod::Coverage  = 1.04
 Pod::Coverage::Moose = 0.02
+
+[MetaResources]
+x_IRC = irc://irc.perl.org/#moose
+x_MailingList = http://lists.perl.org/list/moose.html
