add missing authordep

--- a/dist.ini
+++ b/dist.ini
@@ -25,6 +25,8 @@ Test::PodSpelling.stopwords[9] = subtype
 
 [SurgicalPodWeaver]
 
+; authordep Pod::Weaver::Section::Contributors
+
 [ContributorsFromGit]
 
 ; specific version requirements
