--- a/dist.ini
+++ b/dist.ini
@@ -49,6 +49,9 @@ Pod::Coverage::Moose = 0.02
 x_IRC = irc://irc.perl.org/#moose
 x_MailingList = http://lists.perl.org/list/moose.html
 
+[Test::CheckBreaks]
+conflicts_module = Moose::Conflicts
+
 [Test::CleanNamespaces]
 :version = 0.003
 skip = ^MooseX::Types::CheckedUtilExports$  ; TODO: Moose::Exporter should install import, unimport as methods
