--- a/dist.ini
+++ b/dist.ini
@@ -4,16 +4,9 @@ license = Perl_5
 copyright_holder = Robert "phaylon" Sedlacek
 copyright_year = 2007
 
-; authordep Dist::Zilla::Plugin::PodWeaver = 4.004
-; authordep Pod::Elemental::PerlMunger = 0.200001
-[SurgicalPodWeaver]
-replacer = replace_with_comment
-post_code_replacer = replace_with_nothing
-
 [@Author::ETHER]
-:version = 0.021
-server = github
--remove = PodWeaver         ; we are more surgical
+:version = 0.052
+surgical_podweaver = 1
 -remove = PodCoverageTests  ; we have our own custom one
 -remove = Test::UnusedVars  ; we like our $class!
 Authority.authority = cpan:PHAYLON
