use my new (and fixed) [Test::CleanNamespaces] plugin!

--- a/dist.ini
+++ b/dist.ini
@@ -48,3 +48,8 @@ Pod::Coverage::Moose = 0.02
 [MetaResources]
 x_IRC = irc://irc.perl.org/#moose
 x_MailingList = http://lists.perl.org/list/moose.html
+
+[Test::CleanNamespaces]
+:version = 0.003
+skip = ^MooseX::Types::CheckedUtilExports$  ; TODO: Moose::Exporter should install import, unimport as methods
+skip = ^MooseX::Types::(TypeDecorator|UndefinedType)$   ; TODO: handle overloads
