--- a/dist.ini
+++ b/dist.ini
@@ -37,6 +37,7 @@ namespace::autoclean = 0.08
 Test::Warnings = 0
 Test::Pod::Coverage  = 1.04
 Pod::Coverage::Moose = 0.02
+Test::CleanNamespaces = 0.09
 
 [MetaResources]
 x_IRC = irc://irc.perl.org/#moose
@@ -46,6 +47,3 @@ x_MailingList = http://lists.perl.org/list/moose.html
 conflicts_module = Moose::Conflicts
 
 [Test::CleanNamespaces]
-:version = 0.003
-skip = ^MooseX::Types::CheckedUtilExports$  ; TODO: Moose::Exporter should install import, unimport as methods
-skip = ^MooseX::Types::(TypeDecorator|UndefinedType)$   ; TODO: handle overloads
