--- a/dist.ini
+++ b/dist.ini
@@ -21,6 +21,7 @@ Test::PodSpelling.stopwords[6] = Organise
 Test::PodSpelling.stopwords[7] = parameterized
 Test::PodSpelling.stopwords[8] = parameterize
 Test::PodSpelling.stopwords[9] = subtype
+Test::ReportPrereqs.include = Dist::CheckConflicts
 
 ; authordep Pod::Weaver::Section::Contributors
 
