this is a distribution eligible for static install

--- a/dist.ini
+++ b/dist.ini
@@ -22,6 +22,7 @@ Test::PodSpelling.stopwords[7] = parameterized
 Test::PodSpelling.stopwords[8] = parameterize
 Test::PodSpelling.stopwords[9] = subtype
 Test::ReportPrereqs.include = Dist::CheckConflicts
+StaticInstall.dry_run = 0   ; we can safely set this here
 
 ; specific version requirements
 [Prereqs / RuntimeRequires]
