Add Dist::Zilla::Plugin::SurgicalPodWeaver as an authordep

--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,7 @@ license = Perl_5
 copyright_holder = Robert "phaylon" Sedlacek
 copyright_year = 2007
 
+;authordep Dist::Zilla::Plugin::SurgicalPodWeaver
 [@Author::ETHER]
 :version = 0.094
 surgical_podweaver = 1
