--- a/dist.ini
+++ b/dist.ini
@@ -42,4 +42,6 @@ x_IRC = irc://irc.perl.org/#moose
 x_MailingList = http://lists.perl.org/list/moose.html
 
 [Test::CheckBreaks]
+:version = 0.017
 conflicts_module = Moose::Conflicts
+conflicts_module = Module::Runtime::Conflicts
