--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ perl:
   - '5.14'
   - '5.12'
   - '5.10'
+  - '5.8'
 matrix:
   allow_failures:
     - perl: blead
@@ -26,7 +27,19 @@ matrix:
       perl: '5.24'
 env:
   global:
-    - RELEASE_TESTING=1
     - AUTHOR_TESTING=1
+    - AUTOMATED_TESTING=1
+    - RELEASE_TESTING=0
 before_install:
-  - eval $(curl https://travis-perl.github.io/init) --auto
+  - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
+  - source ~/travis-perl-helpers/init
+  - build-perl
+  - perl -V
+  - build-dist
+  - cd $BUILD_DIR
+install:
+  - cpan-install --deps
+script:
+  - perl Build.PL
+  - ./Build
+  - prove -b -r -s -j1 $(test-files)
