--- a/dist.ini
+++ b/dist.ini
@@ -6,10 +6,10 @@ copyright_year = 2007
 
 ;authordep Dist::Zilla::Plugin::SurgicalPodWeaver
 [@Author::ETHER]
-:version = 0.094
+:version = 0.117
 surgical_podweaver = 1
 -remove = Test::UnusedVars  ; we like our $class!
-Authority.authority = cpan:PHAYLON
+authority = cpan:PHAYLON
 Test::MinimumVersion.max_target_perl = 5.008003
 Test::PodSpelling.stopwords[0] = SUBTYPES
 Test::PodSpelling.stopwords[1] = coercions
