--- a/dist.ini
+++ b/dist.ini
@@ -21,7 +21,8 @@ Test::PodSpelling.stopwords[6] = Organise
 Test::PodSpelling.stopwords[7] = parameterized
 Test::PodSpelling.stopwords[8] = parameterize
 Test::PodSpelling.stopwords[9] = subtype
-Test::ReportPrereqs.include = Dist::CheckConflicts
+Test::ReportPrereqs.include[0] = Dist::CheckConflicts
+Test::ReportPrereqs.include[1] = namespace::clean
 StaticInstall.dry_run = 0   ; we can safely set this here
 
 ; specific version requirements
